# resale-property-sg

./: .gitignore  AGENTS.md  Dockerfile  HDB_eda.ipynb  README.md  URA_eda.ipynb  URA_rent_eda.ipynb  analysis.py  cloudbuild.yaml  dashboard.py  getMappingData.ipynb  loan.md  planning_area.geojson  planning_area.json  planning_area_names.csv  pyproject.toml
data/: hdb_downloaded.parquet  hdbresale_transactions_transformed.parquet  onemap_address_geocodes.parquet
docs/: DEPLOYMENT.md
etl-scripts/: bq_helper.py  etl.py  hdb_resale_etl.py  load_to_bq.py  mapping_etl.py
orchestration/: definitions.py
tests/: readdata.py  test_mapping_etl.py  test_orchestration_definitions.py
